# coder

./: .env.example  .gitignore  README.md  __main__.py  agent_loop.py  agent_services.py  agent_types.py  context.py  hooks.py  hooks_builtin.py  main.py  permissions.py  pyproject.toml  requirements.txt  session.py  settings.py  streaming_executor.py  usage.py
hooks/: __init__.py  builtin.py  runner.py
permissions/: __init__.py  manager.py  rules.py
services/: compact.py  tool_result_storage.py  worktree.py
src/coder/: __main__.py  agent_loop.py  agent_services.py  agent_types.py  context.py  logging_config.py  main.py  session.py  streaming_executor.py
src/coder/cli/: commands.py  render.py  repl.py
src/coder/core/: agent_loop.py  context.py  errors.py  events.py  services.py  streaming.py
src/coder/git/: __init__.py
src/coder/hooks/: __init__.py  builtin.py  runner.py
src/coder/permissions/: __init__.py  manager.py
src/coder/persistence/: settings.py
src/coder/services/: compact.py
src/coder/subagents/: __init__.py  explore.py  general_purpose.py  plan.py  registry.py
src/coder/tools/: agent.py  agent_tool.py  base.py  bash.py  file_edit.py  file_read.py  file_write.py  glob_tool.py  grep_tool.py
subagents/: __init__.py  explore.py  general_purpose.py  plan.py  registry.py
tests/: conftest.py  test_agent_loop.py  test_agent_tool.py  test_bash_and_read.py  test_compact.py  test_context.py  test_file_tools.py  test_hooks.py  test_hooks_builtin.py  test_permission_rule.py  test_permissions.py  test_session.py  test_settings.py  test_streaming_executor.py  test_tool_result_storage.py  test_tools.py  test_types.py
tools/: agent_tool.py  base.py  bash.py  file_edit.py  file_read.py  file_write.py  glob_tool.py  grep_tool.py
